--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build-fast": "tsup src/index.ts --format cjs,esm",
-    "build": "pnpm run build-fast -- --dts-resolve",
+    "build": "tsup src/index.ts --minify --format cjs,esm --dts-resolve",
     "test": "vitest run",
     "prepublishOnly": "pnpm run build"
   },
