--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "tsup": "6.5.0",
     "typescript": "4.9.3",
     "vitest": "0.25.3"
