--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
+    "dev": "tsup src/index.ts --watch --minify --sourcemap --format esm --onSuccess=\"node dist/index.mjs\"",
+    "dev:cjs": "tsup src/index.ts --watch --minify --sourcemap --format cjs --onSuccess=\"node dist/index.js\"",
     "build": "tsup src/index.ts --minify --format cjs,esm --dts-resolve",
     "test": "vitest run",
     "prepublishOnly": "pnpm run build"
